Add epoch range to validator uptime
